# glasses

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README  config.h.in  config.hh.in  configure  configure.ac  configure.help  glasses.pc.in
src/: Makefile.am  audio_subsystem.cc  audio_subsystem.hh  audio_subsystem_fwd.hh  basic_length.hh  basic_length.tcc  basic_length_fwd.hh  bmp_filename.cc  bmp_filename.hh  bmp_filename_fwd.hh  centered_window.cc  centered_window.hh  centered_window_fwd.hh  clear_render.cc  clear_render.hh  clear_render_fwd.hh  colour.cc  colour.hh  colour_fwd.hh  event_dispatch.cc  event_dispatch.hh  event_dispatch_fwd.hh  event_loop.hh  event_loop.tcc  event_loop_fwd.hh  events_subsystem.cc  events_subsystem.hh  events_subsystem_fwd.hh  filename.cc  filename.hh  filename_fwd.hh  flac_filename.hh  flac_filename_fwd.hh  fullscreen_desktop_window.cc  fullscreen_desktop_window.hh  fullscreen_desktop_window_fwd.hh  fullscreen_window.cc  fullscreen_window.hh  fullscreen_window_fwd.hh  gamecontroller_subsystem.cc  (+224 more)
src/detail/: basic_filename.hh  basic_filename.tcc  basic_filename_fwd.hh  sdl_system.cc  sdl_system.hh  sdl_system_fwd.hh  system.cc  system.hh  system_fwd.hh  translate_event.hh  translate_event.tcc  translate_keydown_event.hh  translate_keydown_event.tcc  translate_keydown_nonrepeat_event.hh  translate_keydown_nonrepeat_event.tcc  translate_keydown_repeat_event.hh  translate_keydown_repeat_event.tcc  translate_keyup_event.hh  translate_keyup_event.tcc  translate_mouse_buttondown_event.hh  translate_mouse_buttondown_event.tcc  translate_mouse_buttonup_event.hh  translate_mouse_buttonup_event.tcc  translate_mouse_motion_event.hh  translate_mouse_motion_event.tcc  translate_quit_event.hh  translate_quit_event.tcc  window.cc  window.hh  window_fwd.hh
src/dim/: height.cc  height.hh  height_fwd.hh  width.cc  width.hh  width_fwd.hh
test/: Makefile.am  basic_length.cc  bmp_filename.cc  colour.cc  filename.cc  height.cc  logical_cleanup.cc  logical_init.cc  logical_scope_guard.cc  point.cc  point_bounding.cc  point_crossing.cc  point_inside.cc  point_io.hh  point_io.tcc  point_outside.cc  point_shifted.cc  positioned_rectangle.cc  positioned_rectangle_bottom_right.cc  positioned_rectangle_equality.cc  positioned_rectangle_intersect.cc  positioned_rectangle_io.hh  positioned_rectangle_io.tcc  positioned_rectangle_outside.cc  positioned_rectangle_quadrants.cc  positioned_rectangle_shift.cc  rectangle.cc  rectangle_bottom_right.cc  rectangle_intersect.cc  rectangle_io.hh  rectangle_io.tcc  rectangle_outside.cc  rectangle_point_common.cc  sdl_point.cc  sdl_rect.cc  sdl_rect_point_common.cc  text.cc  title.cc  ttf_filename.cc  width.cc
test/dim/: height.cc  width.cc
tools/: add_component.bash  install.bash  localvimrc  version.bash  version.sh
